Remove personal image and update global styles for dark mode support. Adjust layout and page components for improved responsiveness. Refactor navbar for theme toggling and simplify structure. Update resume data with new avatar and correct educational links.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,18 @@
 
 
 body{
-  /* background: linear-gradient(to right, #a8a1d1, #dcd9f8, #cde3ea); */
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  @apply text-black transition-colors duration-300;
+  background-color: #fbeed9 !important;
+}
 
+.dark body {
+  background-color: #000 !important;
+  color: #fff;
+}
+
+.bg-card{
+  padding: 8px 10px;
 }
 
 @layer base {
